# rEVOLVE

./: .gitignore  CLAUDE.md  DEPRECATED_SRC_FEATURES.md  analyse_evolution.ipynb  load.py  pyproject.toml  visualize_best_circle_packing.py
checkpoints/: circle_packing_evolver3_checkpoint.pkl
example_problems/: run_example.py
example_problems/circle_packing/: README.md  evaluation.py  run_async.py  run_circle_packing.py  spec.py
example_problems/clifford/: GL_search.py  debug_evaluate2.py  evaluate.py  evaluate2.py  evaluate3.py  run.py  run_async.py  search.py  search_dataset.pkl  spec.py  spec2.py  spec3.py  test_setup.py  test_spec2.py
example_problems/guess_the_votes/: evaluation.py  spec.py  test.json  test.py
example_problems/heilbronn_triangles/: evaluation.py  spec.py
outputs/2025-06-12_15-17-26_guess_the_votes_code_golf/: population.json  population_visualization  report.md
outputs/2025-06-12_15-25-33_guess_the_votes_code_golf/: population.json  population_visualization  report.md
outputs/2025-06-12_15-50-03_guess_the_votes_code_golf/: population.json  population_visualization  report.md
outputs/2025-06-12_16-00-17_guess_the_votes_code_golf/: population.json  population_visualization  report.md
outputs/2025-06-12_16-05-30_guess_the_votes_code_golf/: population.json  report.md  (+1 more)
src/: checkpoint_utils.py  evaluation.py  evolve.py  evolve2.py  evolve3.py  mutate.py  population.py  prompt.py  reporting.py  run_example_async.py  specification.py
src_async/: evolve.py  mutate.py  population.py  prompt.py  run_example_async.py  specification.py
(+90 files in other folders)
