[project]
name = "revolve"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "graphviz>=0.20.3",
    "logfire>=3.18.0",
    "matplotlib>=3.10.3",
    "pydantic>=2.11.5",
    "pydantic-ai>=0.2.16",
    "python-dotenv>=1.1.0",
    "scipy>=1.15.3",
]

[tool.setuptools]

